
  o Minor features, controller:
    - Add a REASON field to CIRC events; for backward compatibility, this
      field is sent only to controllers that have enabled the extended
      event format.  Also, add additional reason codes to explain why a
      given circuit has been destroyed or truncated. (Patches from Mike
      Perry)

  o Security bugfixes:
    - When the user sends a NEWNYM signal, clear the client-side DNS
      cache too. Otherwise we continue to act on previous information.

  o Minor bugfixes:
    - Change NT service functions to be loaded on demand.  This lets us
      build with mingw without breaking Tor for Windows 98 users.
    - Do DirPort reachability tests less often, since a single test
      chews through many circuits before giving up.
    - In the hidden service example in torrc.sample, stop recommending
      esoteric and discouraged hidden service options.
    - Avoid sending junk to controllers or segfaulting when a controller
      uses EVENT_NEW_DESC with verbose nicknames.
    - When stopping an NT service, wait up to 10 sec for it to actually
      stop.  (Patch from Matt Edman; resolves bug 295.)
    - Fix handling of verbose nicknames with ORCONN controller events:
      make them show up exactly when requested, rather than exactly when
      not requested.
    - When reporting verbose nicknames in entry_guards_getinfo(), avoid
      printing a duplicate "$" in the keys we send.
    - Stop triggering asserts if the controller tries to extend hidden
      service circuits.
    - Correctly set maximum connection limit on Cygwin.
    - Try to detect windows correctly when cross-compiling.


Changes in version 0.1.2.2-alpha - 2006-10-07
  o Major features:
    - Make our async eventdns library on-by-default for Tor servers,
      and plan to deprecate the separate dnsworker threads.
    - Add server-side support for "reverse" DNS lookups (using PTR
      records so clients can determine the canonical hostname for a given