@@ -848,6 +848,10 @@ _circuit_mark_for_close(circuit_t *circ, int reason, int line,
      * to track them anyway so we can give them to the controller. */
     reason = END_CIRC_REASON_NONE;
   }
+
+  if (reason & END_CIRC_REASON_FLAG_REMOTE)
+    reason &= ~END_CIRC_REASON_FLAG_REMOTE;
+
   if (reason < _END_CIRC_REASON_MIN || reason > _END_CIRC_REASON_MAX) {
     log_warn(LD_BUG, "Reason %d out of range at %s:%d", reason, file, line);
     orig_reason = reason = END_CIRC_REASON_NONE;
